# sss

./: .gitmodules  CMakeLists.txt  main.cpp  sss.pro
include/sss/: fwd.h  serializable.h
include/sss/details/: backend_wrapper.h  basic_serializable.h  json_backend.h  serializable_field.h  serializable_field_macro.h  to_tuple.hpp
tests/: nested_structs.cpp  primitive_types.cpp  serialize_deserialize_check.h  string_and_wstring.cpp  string_types.cpp
